[package]
name = "jumong_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
async-trait = { version = "0.1.60" }
futures = { version = "0.3.25" }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.23" }
mysql = { version = "23.0.1" }
